--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "morgan": "^1.10.0",
     "motion": "^12.15.0",
     "react": "^18.3.1",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-js-cron": "^5.2.0",
