--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cross-env": "^7.0.3",
     "curl-generator": "^0.4.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^7.2.0",
