--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.1.7",
+    "lefthook": "^2.0.12",
     "lint-staged": "^16.0.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
