--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ AUTH0_CLIENT_ID=example
 AUTH0_AUDIENCE=https://example.com
 AUTH0_ORGANIZATION_ID=example-staff
 API_URL=https://example.com/api
+IDENTIES_API_URL=https://example.com/api
+IDENTIES_HOST=https://example.com/api
