--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "check": "bun run format && bun run lint && bun run typecheck",
     "typecheck": "tsc",
     "format": "npx prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\" \"!**/locales/**\"",
-    "format:check": "npx prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\" \"!**/locales/**\"",
-    "postinstall": "node -e \"const fs=require('node:fs'); const {execSync}=require('node:child_process'); if(!fs.existsSync('.git')) process.exit(0); try{execSync('lefthook install',{stdio:'inherit'});}catch(e){process.exit(e.status ?? 1);}\""
+    "format:check": "npx prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\" \"!**/locales/**\""
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
