--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "motion": "^12.15.0",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.12",
+    "react-csv-reader": "^4.0.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.68.0",
