--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "crypto-js": "^4.2.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.0.0",
