Implement new layout from tessera-ui

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,13 @@ AUTH0_AUDIENCE=https://example.com
 AUTH0_ORGANIZATION_ID=example-staff
 API_URL=https://example.com/api
 IDENTIES_API_URL=https://example.com/api
-IDENTIES_HOST=https://example.com/api
+
+# App URLs
+QUORE_HOST_URL=***
+CUSTOS_HOST_URL=***
+VAULTA_HOST_URL=***
+LOOPLY_HOST_URL=***
+IDENTIES_HOST_URL=***
+ORCHA_HOST_URL=***
+INDEXA_HOST_URL=***
+SENDLY_HOST_URL=***
